--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
   <main>
-    <div class="first_column">
+    <div class="column first_column">
       <img src="icon-sedans.svg" alt="sedans logo">
       <h1>SEDANS</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next
         road trip.</p>
       <button class="button button1">Learn More</button>
     </div>
-    <div class="second_column">
-      <img src="icon-sedans.svg" alt="sedans logo">
+    <div class="column second_column">
+      <img src="icon-suvs.svg" alt="suvs logo">
       <h1>SUVS</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
         off-road adventures.</p>
       <button class="button button2">Learn More</button>
     </div>
-    <div class="third_column">
+    <div class="column third_column">
       <img src="icon-luxury.svg" alt="luxury logo">
       <h1>LUXURY</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
